@@ -1,6 +1,8 @@
 vim-addon-manager (0.4.3) UNRELEASED; urgency=low
 
   * Don't try to remove “/path/to/addons/.”.  (Closes: #566186)
+  * Do not regenerate the helptags after removing the last
+    documentation-providing addon.  Simply remove the docs directory instead.
 
  -- James Vega <jamessan@debian.org>  Thu, 21 Jan 2010 23:49:47 -0500
 
